docs/1.7/SelfSubjectAccessReview.md
# SelfSubjectAccessReview

* [write operations](#write)

## write

### apis.authorization.k8s.io.v1.selfsubjectaccessreviews.post

create a SelfSubjectAccessReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authorization.v1.SelfSubjectAccessReview |

### apis.authorization.k8s.io.v1beta1.selfsubjectaccessreviews.post

create a SelfSubjectAccessReview

#### Query

| Parameter | Description |
| --------- | ----------- |
| `qs` | Querystring object |
| `qs.pretty` | If &#39;true&#39;, then the output is pretty printed. |

#### Body

| Parameter | Description |
| --------- | ----------- |
| `body` | #&#x2F;definitions&#x2F;io.k8s.kubernetes.pkg.apis.authorization.v1beta1.SelfSubjectAccessReview |

